# harness-v2

./: .gitignore  AGENTS.md  CURRENT.md  LICENSE  README.ko.md  README.md  RELEASE_NOTES.md  RULES.md  package.json  pyproject.toml
_build_backend/: harness_backend.py
artifacts/: log.md  registry.md
contracts/: approval-decision.schema.json  approval.schema.json  artifact.schema.json  freshness.schema.json  gate-state.schema.json  lifecycle.schema.json  permission-decision.schema.json  permission.schema.json  proof-receipt.schema.json  proof.schema.json  task.schema.json  transition.schema.json
control/: approval.md  lifecycle.md  permission.md  proof.md  source.md
harness_v2/: __init__.py  cli.py  core.py  decisions.py  doctor.py  freshness.py  gate.py  layout.py  lifecycle.py  mcp.py  modes.py  preflight.py  verify.py
records/: README.md
release/: transaction.md
routing/: manifest.md
rules/: workflows.md
safety/: improvement.md  regression.md
templates/: approval-decision.json  approval-request.md  freshness-map.json  gate-manifest.md  gate-state.json  permission-decision.json  proof-receipt.json  proof-report.md  task.json  transition-log.md
tests/: test_harness_v2.py
tests/fixtures/: invalid-broad-approval.json  invalid-gate-mismatch.json  invalid-missing-approval.json  invalid-record-strength.json  invalid-stale-approval.json  invalid-stale-proof-receipt.json  invalid-stale-proof.json  invalid-transition-stale-approval.md  valid-approval-decision.json  valid-proof-receipt.json  valid-task.json  valid-transition-log.md
