[build-system]
requires = []
build-backend = "harness_backend"
backend-path = ["_build_backend"]

[project]
name = "harness-v2"
version = "0.1.13"
description = "Local workflow harness for AI-assisted software work."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
harness-v2 = "harness_v2.cli:main"
